--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -7,6 +7,7 @@ on:
     branches: ["main"]
     paths:
     - 'Web/**/**.*'
+    - 'Web2/**/**.*'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -36,11 +37,11 @@ jobs:
           lfs: true
       - name: Setup Pages
         uses: actions/configure-pages@v3
-      - name: Upload artifact
+      - name: Upload artifact 1
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
-          path: './Web'
+          path: '.'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
